added mysql dependency, changed getfilecontent to work with .wan and added sql_scripts folder